Adjusting margins for nav headings to align correctly on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,13 +54,13 @@
     margin-left:0px;
     margin-bottom:0px;
     margin-right:0px;
+    letter-spacing:2px;
 }
 
 .nav-menu-title-actress{
     font-family: 'Playfair Display', serif;
     font-size:20px;
     color:#000;
-    text-align:center;
     margin-top:0px;
     letter-spacing:1px;
 }
